# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

config("input_device_algo_touch_screen_public_config") {
  include_dirs = [
    "${mmi_path}/service/input_provider/include",
    "include",
  ]
}

ohos_shared_library("input_device_algo_touch_screen") {
  include_dirs = [
    "include",
    #"${mmi_path}/service/event_handler/include",
    #"${mmi_path}/service/window_manager/include",
    "${mmi_path}/util/common/include",
    "${mmi_path}/util/network/include",
  ]
  sources = [
    "src/touch_screen_event_handler.cpp",
    "src/touch_screen_event_handler_creator.cpp",
  ]
  
  defines = input_default_defines

  public_configs = [ ":input_device_algo_touch_screen_public_config" ]

  relative_install_dir = "module/multimodalinput/plugins/input_device_algo"

  deps = [
    "//foundation/multimodalinput/input/patch/diff_mtdev_mmi:libmtdev",
    "${mmi_path}/util:libmmi-util",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_input:hdi_input",
    "hiviewdfx_hilog_native:libhilog",
  ]
}